# Differentiable-GPU-Image-Registration

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
docs/: final_report.md
images/: 0000_params.json  0001_params.json  0002_params.json  0003_params.json  0004_params.json  0005_params.json  0006_params.json  0007_params.json  0008_params.json  0009_params.json  0010_params.json  0011_params.json  0012_params.json  0013_params.json  0014_params.json  0015_params.json  0016_params.json  0017_params.json  0018_params.json  0019_params.json  0020_params.json  0021_params.json  0022_params.json  0023_params.json  0024_params.json  0025_params.json  0026_params.json  0027_params.json  0028_params.json  0029_params.json  0030_params.json  0031_params.json  0032_params.json  0033_params.json  0034_params.json  0035_params.json  0036_params.json  0037_params.json  0038_params.json  0039_params.json  (+960 more)
include/dgir/: affine.h  alignment.h  image.h  loss.h  optimizer.h  warp_cpu.h  warp_cuda.h
include/registration/: affine.hpp  cpu_registration.hpp  cuda_check.cuh  gpu_registration.cuh  image.hpp  image_io.hpp  optimizer.hpp
profiling/: README.md
scripts/: make_video.sh  profile.sh
src/: affine.cpp  alignment.cpp  cpu_registration.cpp  gpu_registration.cu  image.cpp  image_io.cpp  loss.cpp  optimizer.cpp  warp_cpu.cpp  warp_cuda.cu
tests/: test_affine.cpp  test_common.hpp  test_cpu_baseline.cpp  test_gpu_loss_gradient.cpp  test_gpu_warp.cpp  test_image.cpp  test_image_io.cpp  test_optimizer.cpp  test_starter.cpp
tools/: make_synthetic_pair.cpp  register_cli.cpp  register_images.cpp  registration_bench.cpp
